k8s/memos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memos
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: memos.mmmelton.com # Change this to your actual domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memos
                port:
                  number: 5230
  tls:
    - hosts:
        - memos.mmmelton.com # Change this to your actual domain
