k8s/shiori-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shiori
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: shiori.mmmelton.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shiori
                port:
                  number: 8080
  tls:
    - hosts:
        - shiori.mmmelton.com
